ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: micro-apps.local
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /()(.*)
            backend:
              service:
                name: main-app-service
                port:
                  number: 4201
          - pathType: ImplementationSpecific
            path: /react(/|$)(.*)
            backend:
              service:
                name: react-micro-app-service
                port:
                  number: 8080
          - pathType: ImplementationSpecific
            path: /vue(/|$)(.*)
            backend:
              service:
                name: vue-micro-app-service
                port:
                  number: 3000
