network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-vue-access
spec:
  podSelector:
    matchLabels:
      app: vue-micro-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: main-app
    # - ports:
    #     - port: 3000
    #       protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-react-access
spec:
  podSelector:
    matchLabels:
      app: react-micro-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: main-app
    # - ports:
    #     - port: 8080
    #       protocol: TCP
